docs: README 改写为简历向（参考.md 风格），移除接口明细表；参考.md 加入 gitignore